--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
     "react-syntax-highlighter": "^15.6.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "vercel": "^33.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
